fix backgorund image not showing for mobile version

--- a/css/main.css
+++ b/css/main.css
@@ -152,7 +152,7 @@ a:hover{
 /* mobile */
 @media (max-width:375px){
     body{
-     background-image: url('/images/pattern-background-mobile.svg');
+     background-image: url('../images/pattern-background-mobile.svg');
      
     }
     
